--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 
 # Node
 /node_modules
-client/node_modules
-server/node_modules
+/client/node_modules
+/server/node_modules
 npm-debug.log
 yarn-error.log
 
