--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,4 @@ MONGO_URI="mongodb+srv://rohit010:UwRYLxoJBWta1wT8@cluster-1.3yt5yxt.mongodb.net
 # Server port
 PORT=3000
 
-CORS_ORIGIN="http://localhost:4200/"
+CORS_ORIGIN="http://127.0.0.1:4200"
