--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection String
-MONGO_URI="mongodb+srv://rohit010:UwRYLxoJBWta1wT8@cluster-1.3yt5yxt.mongodb.net/expense-tracker"  
+MONGO_URI="" 
 
 #MONGO_URI="mongodb://127.0.0.1:27017/expense_tracker"
 
